--- a/index.html
+++ b/index.html
@@ -82,6 +82,57 @@
       </div>
     </div>
   </section>
+
+<!-- Project Overview -->
+  <section class="section_width" style="border-bottom: 2px solid red;">
+    <h3>PROJECT OVERVIEW</h3>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus ducimus at deserunt, nam incidunt atque dignissimos optio quia beatae labore maiores in molestiae minima nemo error vel debitis dolore eligendi nihil officiis tenetur! Facere a facilis aliquam eos blanditiis porro.</p>
+    <div class="row">
+      <div class="col-12 col-lg-6">
+        <ul>
+          <li>Lorem ipsum dolor sit amet.Lorem ipsum</li>
+          <li>Lorem ipsum dolor sit amet.Lorem ipsum</li>
+          <li>Lorem ipsum dolor sit amet.Lorem ipsum</li>
+        </ul>
+      </div>
+      <div class="col-12 col-lg-6">
+        <ul>
+          <li>Lorem ipsum dolor sit amet.Lorem ipsum</li>
+          <li>Lorem ipsum dolor sit amet.Lorem ipsum</li>
+          <li>Lorem ipsum dolor sit amet.Lorem ipsum</li>
+        </ul>
+      </div>
+    </div>
+  </section>
+<!--  -->
+  <section class="section_width" style="border-bottom: 2px solid red;">
+    <div class="row">
+      <div class="col-12 col-lg-4">
+        <ul>
+          <li>Lorem ipsum dolor sit amet.Lorem ipsum</li>
+          <li>Lorem ipsum dolor sit amet.Lorem ipsum</li>
+          <li>Lorem ipsum dolor sit amet.Lorem ipsum</li>
+        </ul>
+      </div>
+      <div class="col-12 col-lg-8">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit quo vero dolore animi reprehenderit quia repellat, fugit, inventore minus repudiandae provident consequuntur quasi quam facilis aut asperiores laborum id adipisci sequi. Sapiente quod dolorem distinctio ratione, aliquid in optio non cumque eius dolore magnam doloremque soluta corporis tempora alias qui nemo corrupti dicta excepturi quasi. Quia sit incidunt, sequi asperiores dicta sunt, distinctio reiciendis harum aliquid at error esse? Temporibus molestiae sapiente quod explicabo quo.</p>
+      </div>
+    </div>
+  </section>
+
+  <section class="section_width">
+    <div class="row">
+      <div class="col-12 col-lg-4">
+
+      </div>
+      <div class="col-12 col-lg-4">
+        
+      </div>
+      <div class="col-12 col-lg-4">
+
+      </div>
+    </div>
+  </section>
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
